# Auto-Execution-Engine

./: README.md  pyproject.toml
docs/: architecture.md  current_foundation_review.md  decimal_precision_policy.md  remaining_production_steps.md  step12_external_notes.md
src/auto_execution_engine/: observability_models.py  observability_service.py  promotion_gates.py
src/auto_execution_engine/adapters/broker/: alpaca.py  models.py  service.py
src/auto_execution_engine/adapters/persistence/: sqlite_order_store.py
src/auto_execution_engine/application/: execution_service.py
src/auto_execution_engine/bootstrap/: startup.py
src/auto_execution_engine/common/: decimal_policy.py
src/auto_execution_engine/config/: execution_mode.py
src/auto_execution_engine/domain/events/: models.py
src/auto_execution_engine/domain/orders/: models.py
src/auto_execution_engine/domain/risk/: models.py  service.py
src/auto_execution_engine/reconciliation/: broker_sync_models.py  broker_sync_service.py  models.py  projections.py  runner.py  service.py
src/auto_execution_engine/trading_plane/: leases.py
tests/unit/: test_account_leases.py  test_alpaca_broker_submitter.py  test_broker_submission.py  test_broker_sync_service.py  test_decimal_policy.py  test_execution_application_service.py  test_execution_mode.py  test_order_aggregate.py  test_reconciliation_runner.py  test_reconciliation_service.py  test_risk_service.py  test_sqlite_order_store.py
